--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cloudinary-labs/cloudinary-laravel": "^2.2",
+        "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "yoeunes/toastr": "^3.1"
