--- a/storage/app/.gitignore
+++ b/storage/app/.gitignore
@@ -1,5 +1,7 @@
 *
 !private/
 !public/backend/css/custom.css
-!public/backend/js/main.css
+!public/backend/js/main.js
+!public/backend/js/variant.js
+
 !.gitignore
