--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "anayarojo/shoppingcart": "^4.2",
         "cloudinary-labs/cloudinary-laravel": "^2.2",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^11.31",
